# azathoth

./: .gitignore  README.md  pyproject.toml  test_ast.py
azathoth/: __init__.py  ast_utils.py  azathoth_converter.py  common_agent.py  common_schema.py
azathoth/action_converter/: __init__.py  file_action_converter.py  project_action_converter.py  prompt.py  schema.py
azathoth/api_converter/: __init__.py  file_api_converter.py  function_api_converter.py  project_api_converter.py  prompt.py  schema.py
azathoth/common/: __init__.py  enum.py  schema.py
azathoth/common/agent/: __init__.py  file_content.py  py_splitter.py  segmenter.py  ts_export_helper.py
azathoth/google_form_builder/v1/: google_form_builder.py  prompt.py  schema.py
azathoth/schema_converter/: __init__.py  file_schema_converter.py  project_schema_converter.py  prompt.py  schema.py  segment_schema_converter.py
azathoth/schema_converter/file_schema_converter/: __init__.py  file_schema_converter.py  schema.py  schema_import_converter.py
tests/: test-backend-convert-planner.py  test-backend-schema-converter.py  test-file-schema-converter.py  test-segment-converter.py
