[tool.poetry]
name = "azathoth"
version = "0.0.1"
description = "The development kit that gives birth to most of the Autom itself."
authors = ["autom_admin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
# autom = { git = "git@github.com:NaturaFlex/autom.git", branch = "main" }
autom = { path = "/home/steve/workspace/autom" }
pydantic = "^2.9.0"
google-api-python-client = "^2.145.0"
google-auth-httplib2 = "^0.2.0"
oauth2client = "^4.1.3"
pydub = "^0.25.1"

[tool.autom]
qualifier = "azathoth"
name = "Azathoth"
owner_qualifier = "autom_admin"
owner_email = "admin@autom.com"
description = "The development kit that gives birth to most of the Autom itself."
tags = ["Code Generation", "Development Kit", "Automation"]
version = "0.0.1"
python_version = "3.11"
python_version_spec = "^3.11"
publicity = "public"
github_repo_url = "https://github.com/stevieflyer/azathoth.git"

[tool.autom.dependencies]
"autom-admin.autom" = "0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
